--- a/web-app-journal.html
+++ b/web-app-journal.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-03-10 Tue 22:53 -->
+<!-- 2020-03-11 Wed 16:44 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Being a Journal of my Java Web-App Development Journey</title>
@@ -160,19 +160,6 @@
   .footdef  { margin-bottom: 1em; }
   .figure { padding: 1em; }
   .figure p { text-align: center; }
-  .equation-container {
-    display: table;
-    text-align: center;
-    width: 100%;
-  }
-  .equation {
-    vertical-align: middle;
-  }
-  .equation-label {
-    display: table-cell;
-    text-align: right;
-    vertical-align: middle;
-  }
   .inlinetask {
     padding: 10px;
     border: 2px solid gray;
@@ -202,7 +189,7 @@ ol.lower-alpha { list-style-type: lower-alpha; }
 @licstart  The following is the entire license notice for the
 JavaScript code in this tag.
 
-Copyright (C) 2012-2019 Free Software Foundation, Inc.
+Copyright (C) 2012-2017 Free Software Foundation, Inc.
 
 The JavaScript code in this tag is free software: you can
 redistribute it and/or modify it under the terms of the GNU
@@ -255,30 +242,40 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org20c1707">1. Overview</a></li>
-<li><a href="#orgac7472a">2. Java</a>
+<li><a href="#orgb22efb4">1. Overview</a></li>
+<li><a href="#orge63e9c6">2. Java</a>
 <ul>
-<li><a href="#orge1edb95">2.1. On a Mac</a></li>
-<li><a href="#org84bc569">2.2. Java EE</a>
+<li><a href="#org9eb968f">2.1. On a Mac</a></li>
+<li><a href="#orge7c6593">2.2. Java EE</a>
 <ul>
 <li><a href="#jakarta-java-version-question">2.2.1. Question: Does Jakarta EE run on any version of Java &gt;= 8?  Answer: apparently not. :(</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#org807c7d8">3. Tomcat</a>
+<li><a href="#org9a40e29">3. Tomcat</a>
 <ul>
-<li><a href="#org0fa1995">3.1. On a Mac</a></li>
+<li><a href="#orge7b2727">3.1. On a Mac</a></li>
+<li><a href="#orgc4343a9">3.2. Deploy code</a></li>
 </ul>
 </li>
-<li><a href="#org20b2151">4. Database</a></li>
-<li><a href="#orgecf9bda">5. JS Framework</a></li>
+<li><a href="#org69b61da">4. Database</a>
+<ul>
+<li><a href="#org54cc1ad">4.1. Consider an ORM of some sort</a></li>
+</ul>
+</li>
+<li><a href="#org7745686">5. JS Framework</a></li>
+<li><a href="#org3f3ad35">6. App code</a>
+<ul>
+<li><a href="#hello-world">6.1. Simplest possible code</a></li>
+</ul>
+</li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org20c1707" class="outline-2">
-<h2 id="org20c1707"><span class="section-number-2">1</span> Overview</h2>
+<div id="outline-container-orgb22efb4" class="outline-2">
+<h2 id="orgb22efb4"><span class="section-number-2">1</span> Overview</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 I'm going to keep a diary of my effort to develop a web app from soup to nuts.
@@ -290,8 +287,8 @@ The initial plans are in <a href="README.html">README.org</a>.
 </div>
 </div>
 
-<div id="outline-container-orgac7472a" class="outline-2">
-<h2 id="orgac7472a"><span class="section-number-2">2</span> Java</h2>
+<div id="outline-container-orge63e9c6" class="outline-2">
+<h2 id="orge63e9c6"><span class="section-number-2">2</span> Java</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 Currently running my wiki on JSPWiki on Tomcat 8 on Java 8.  I'd like to run a different process
@@ -308,8 +305,8 @@ openjdk is legal to use.  Yay.
 </p>
 </div>
 
-<div id="outline-container-orge1edb95" class="outline-3">
-<h3 id="orge1edb95"><span class="section-number-3">2.1</span> On a Mac</h3>
+<div id="outline-container-org9eb968f" class="outline-3">
+<h3 id="org9eb968f"><span class="section-number-3">2.1</span> On a Mac</h3>
 <div class="outline-text-3" id="text-2-1">
 <p>
 On a Mac, the OpenJDK 8 installer puts files in
@@ -319,8 +316,8 @@ symlink them in to <code>/usr/bin</code>.
 </div>
 </div>
 
-<div id="outline-container-org84bc569" class="outline-3">
-<h3 id="org84bc569"><span class="section-number-3">2.2</span> Java EE</h3>
+<div id="outline-container-orge7c6593" class="outline-3">
+<h3 id="orge7c6593"><span class="section-number-3">2.2</span> Java EE</h3>
 <div class="outline-text-3" id="text-2-2">
 <p>
 Well, first off, a <i>lot</i> has happened in the Java world since I left it, around 2005 or so.
@@ -334,8 +331,8 @@ getting new versions from <a href="https://jakarta.ee/">https://jakarta.ee/</a>.
 </p>
 </div>
 
-<div id="outline-container-org71bb8bb" class="outline-4">
-<h4 id="jakarta-java-version-question"><span class="section-number-4">2.2.1</span> Question: Does Jakarta EE run on any version of Java &gt;= 8?  Answer: apparently not. :(</h4>
+<div id="outline-container-org26ed086" class="outline-4">
+<h4 id="jakarta-java-version-question"><a id="org26ed086"></a><span class="section-number-4">2.2.1</span> Question: Does Jakarta EE run on any version of Java &gt;= 8?  Answer: apparently not. :(</h4>
 <div class="outline-text-4" id="text-jakarta-java-version-question">
 <p>
 Based on this quote: <i>"We also have to move the APIs to support JDK 11."</i> from this article:
@@ -346,12 +343,12 @@ Based on this quote: <i>"We also have to move the APIs to support JDK 11."</i> f
 </div>
 </div>
 
-<div id="outline-container-org807c7d8" class="outline-2">
-<h2 id="org807c7d8"><span class="section-number-2">3</span> Tomcat</h2>
+<div id="outline-container-org9a40e29" class="outline-2">
+<h2 id="org9a40e29"><span class="section-number-2">3</span> Tomcat</h2>
 <div class="outline-text-2" id="text-3">
 </div>
-<div id="outline-container-org0fa1995" class="outline-3">
-<h3 id="org0fa1995"><span class="section-number-3">3.1</span> On a Mac</h3>
+<div id="outline-container-orge7b2727" class="outline-3">
+<h3 id="orge7b2727"><span class="section-number-3">3.1</span> On a Mac</h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 Unzipped Tomcat 9 to <code>/opt</code>.
@@ -364,8 +361,8 @@ Created user <code>tomcat</code> using Mac "Users and Groups" control panel appl
 
 <pre class="example">
 sudo chpass -s /usr/bin/false tomcat
-</pre>
 
+</pre>
 
 <p>
 chown'd the resulting directory (recursively) to user <code>tomcat</code>.
@@ -399,24 +396,56 @@ Running on AdoptOpenJDK 11 is as easy as downloading and installing it and chang
 </p>
 
 <p>
-TODO: It might also be possible to install it via homebrew, which might then keep it up to date
-better than a manual install process would.
+It should also be possible to install it via homebrew, which might then keep it up to date better than a manual
+install process would.
+</p>
+
+<p>
+For homebrew, you'll need to open a "tap" (i.e., add another repository), and then install the "cask" for the jdk you
+want.  See the instructions at the adoptopenjdk.
+</p>
+</div>
+</div>
+
+<div id="outline-container-orgc4343a9" class="outline-3">
+<h3 id="orgc4343a9"><span class="section-number-3">3.2</span> Deploy code</h3>
+<div class="outline-text-3" id="text-3-2">
+<p>
+Well, first you have to write some code.  See <a href="#hello-world">Simplest possible code</a>.
 </p>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org20b2151" class="outline-2">
-<h2 id="org20b2151"><span class="section-number-2">4</span> Database</h2>
+<div id="outline-container-org69b61da" class="outline-2">
+<h2 id="org69b61da"><span class="section-number-2">4</span> Database</h2>
+<div class="outline-text-2" id="text-4">
+</div>
+<div id="outline-container-org54cc1ad" class="outline-3">
+<h3 id="org54cc1ad"><span class="section-number-3">4.1</span> Consider an ORM of some sort</h3>
+</div>
 </div>
 
-<div id="outline-container-orgecf9bda" class="outline-2">
-<h2 id="orgecf9bda"><span class="section-number-2">5</span> JS Framework</h2>
+<div id="outline-container-org7745686" class="outline-2">
+<h2 id="org7745686"><span class="section-number-2">5</span> JS Framework</h2>
+</div>
+<div id="outline-container-org3f3ad35" class="outline-2">
+<h2 id="org3f3ad35"><span class="section-number-2">6</span> App code</h2>
+<div class="outline-text-2" id="text-6">
+</div>
+<div id="outline-container-orgca71ed8" class="outline-3">
+<h3 id="hello-world"><a id="orgca71ed8"></a><span class="section-number-3">6.1</span> Simplest possible code</h3>
+<div class="outline-text-3" id="text-hello-world">
+<p>
+Uh&#x2026;
+</p>
+</div>
+</div>
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2020-03-10 Tue 22:53</p>
-<p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 26.1 (<a href="https://orgmode.org">Org</a> mode 9.2.3)</p>
+<p class="date">Created: 2020-03-11 Wed 16:44</p>
+<p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 26.1 (<a href="http://orgmode.org">Org</a> mode 9.1.2)</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
