--- a/web-app-journal.html
+++ b/web-app-journal.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2020-03-11 Wed 16:44 -->
+<!-- 2020-03-22 Sun 23:56 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Being a Journal of my Java Web-App Development Journey</title>
@@ -160,6 +160,19 @@
   .footdef  { margin-bottom: 1em; }
   .figure { padding: 1em; }
   .figure p { text-align: center; }
+  .equation-container {
+    display: table;
+    text-align: center;
+    width: 100%;
+  }
+  .equation {
+    vertical-align: middle;
+  }
+  .equation-label {
+    display: table-cell;
+    text-align: right;
+    vertical-align: middle;
+  }
   .inlinetask {
     padding: 10px;
     border: 2px solid gray;
@@ -189,7 +202,7 @@ ol.lower-alpha { list-style-type: lower-alpha; }
 @licstart  The following is the entire license notice for the
 JavaScript code in this tag.
 
-Copyright (C) 2012-2017 Free Software Foundation, Inc.
+Copyright (C) 2012-2019 Free Software Foundation, Inc.
 
 The JavaScript code in this tag is free software: you can
 redistribute it and/or modify it under the terms of the GNU
@@ -242,40 +255,53 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgb22efb4">1. Overview</a></li>
-<li><a href="#orge63e9c6">2. Java</a>
+<li><a href="#org37f239b">1. Overview</a></li>
+<li><a href="#org0263334">2. Java</a>
 <ul>
-<li><a href="#org9eb968f">2.1. On a Mac</a></li>
-<li><a href="#orge7c6593">2.2. Java EE</a>
+<li><a href="#org19af84f">2.1. On a Mac</a></li>
+<li><a href="#orgba0b7db">2.2. Java EE</a>
 <ul>
 <li><a href="#jakarta-java-version-question">2.2.1. Question: Does Jakarta EE run on any version of Java &gt;= 8?  Answer: apparently not. :(</a></li>
 </ul>
 </li>
 </ul>
 </li>
-<li><a href="#org9a40e29">3. Tomcat</a>
+<li><a href="#org98f9c8a">3. Tomcat</a>
 <ul>
-<li><a href="#orge7b2727">3.1. On a Mac</a></li>
-<li><a href="#orgc4343a9">3.2. Deploy code</a></li>
+<li><a href="#orgea7ac28">3.1. On a Mac</a></li>
+<li><a href="#org0095887">3.2. On Ubuntu Linux 16.04</a></li>
+<li><a href="#org82d954d">3.3. Deploy code</a></li>
 </ul>
 </li>
-<li><a href="#org69b61da">4. Database</a>
+<li><a href="#orgfec4b44">4. Database</a>
 <ul>
-<li><a href="#org54cc1ad">4.1. Consider an ORM of some sort</a></li>
+<li><a href="#orgd834179">4.1. Consider an ORM of some sort</a></li>
 </ul>
 </li>
-<li><a href="#org7745686">5. JS Framework</a></li>
-<li><a href="#org3f3ad35">6. App code</a>
+<li><a href="#org6c8265d">5. JavaEE dependencies</a></li>
+<li><a href="#org1c43c89">6. JS Framework</a></li>
+<li><a href="#org47eafed">7. Build system</a>
 <ul>
-<li><a href="#hello-world">6.1. Simplest possible code</a></li>
+<li><a href="#org0069722">7.1. Gradle</a></li>
+<li><a href="#orgc7c0093">7.2. Maven</a>
+<ul>
+<li><a href="#orgc4c72f2">7.2.1. Install/update</a></li>
+<li><a href="#org00a53fe">7.2.2. Make a project</a></li>
+</ul>
+</li>
+</ul>
+</li>
+<li><a href="#orgf9cd067">8. App code</a>
+<ul>
+<li><a href="#hello-world">8.1. Simplest possible code</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-orgb22efb4" class="outline-2">
-<h2 id="orgb22efb4"><span class="section-number-2">1</span> Overview</h2>
+<div id="outline-container-org37f239b" class="outline-2">
+<h2 id="org37f239b"><span class="section-number-2">1</span> Overview</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 I'm going to keep a diary of my effort to develop a web app from soup to nuts.
@@ -287,8 +313,8 @@ The initial plans are in <a href="README.html">README.org</a>.
 </div>
 </div>
 
-<div id="outline-container-orge63e9c6" class="outline-2">
-<h2 id="orge63e9c6"><span class="section-number-2">2</span> Java</h2>
+<div id="outline-container-org0263334" class="outline-2">
+<h2 id="org0263334"><span class="section-number-2">2</span> Java</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 Currently running my wiki on JSPWiki on Tomcat 8 on Java 8.  I'd like to run a different process
@@ -305,8 +331,8 @@ openjdk is legal to use.  Yay.
 </p>
 </div>
 
-<div id="outline-container-org9eb968f" class="outline-3">
-<h3 id="org9eb968f"><span class="section-number-3">2.1</span> On a Mac</h3>
+<div id="outline-container-org19af84f" class="outline-3">
+<h3 id="org19af84f"><span class="section-number-3">2.1</span> On a Mac</h3>
 <div class="outline-text-3" id="text-2-1">
 <p>
 On a Mac, the OpenJDK 8 installer puts files in
@@ -316,8 +342,8 @@ symlink them in to <code>/usr/bin</code>.
 </div>
 </div>
 
-<div id="outline-container-orge7c6593" class="outline-3">
-<h3 id="orge7c6593"><span class="section-number-3">2.2</span> Java EE</h3>
+<div id="outline-container-orgba0b7db" class="outline-3">
+<h3 id="orgba0b7db"><span class="section-number-3">2.2</span> Java EE</h3>
 <div class="outline-text-3" id="text-2-2">
 <p>
 Well, first off, a <i>lot</i> has happened in the Java world since I left it, around 2005 or so.
@@ -331,8 +357,8 @@ getting new versions from <a href="https://jakarta.ee/">https://jakarta.ee/</a>.
 </p>
 </div>
 
-<div id="outline-container-org26ed086" class="outline-4">
-<h4 id="jakarta-java-version-question"><a id="org26ed086"></a><span class="section-number-4">2.2.1</span> Question: Does Jakarta EE run on any version of Java &gt;= 8?  Answer: apparently not. :(</h4>
+<div id="outline-container-org69c4edf" class="outline-4">
+<h4 id="jakarta-java-version-question"><span class="section-number-4">2.2.1</span> Question: Does Jakarta EE run on any version of Java &gt;= 8?  Answer: apparently not. :(</h4>
 <div class="outline-text-4" id="text-jakarta-java-version-question">
 <p>
 Based on this quote: <i>"We also have to move the APIs to support JDK 11."</i> from this article:
@@ -343,12 +369,12 @@ Based on this quote: <i>"We also have to move the APIs to support JDK 11."</i> f
 </div>
 </div>
 
-<div id="outline-container-org9a40e29" class="outline-2">
-<h2 id="org9a40e29"><span class="section-number-2">3</span> Tomcat</h2>
+<div id="outline-container-org98f9c8a" class="outline-2">
+<h2 id="org98f9c8a"><span class="section-number-2">3</span> Tomcat</h2>
 <div class="outline-text-2" id="text-3">
 </div>
-<div id="outline-container-orge7b2727" class="outline-3">
-<h3 id="orge7b2727"><span class="section-number-3">3.1</span> On a Mac</h3>
+<div id="outline-container-orgea7ac28" class="outline-3">
+<h3 id="orgea7ac28"><span class="section-number-3">3.1</span> On a Mac</h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 Unzipped Tomcat 9 to <code>/opt</code>.
@@ -361,15 +387,16 @@ Created user <code>tomcat</code> using Mac "Users and Groups" control panel appl
 
 <pre class="example">
 sudo chpass -s /usr/bin/false tomcat
-
 </pre>
+
 
 <p>
 chown'd the resulting directory (recursively) to user <code>tomcat</code>.
 </p>
 
 <p>
-Created a simple <code>run-tomcat</code> (and analogous <code>stop-tomcat</code>) script in my <code>~/Bin</code> directory:
+Created a simple <code>start-tomcat</code> (and analogous <code>stop-tomcat</code>) script in
+<code>/opt/apache-tomcat-9.0.31/bin</code> directory:
 </p>
 
 <div class="org-src-container">
@@ -407,9 +434,18 @@ want.  See the instructions at the adoptopenjdk.
 </div>
 </div>
 
-<div id="outline-container-orgc4343a9" class="outline-3">
-<h3 id="orgc4343a9"><span class="section-number-3">3.2</span> Deploy code</h3>
+<div id="outline-container-org0095887" class="outline-3">
+<h3 id="org0095887"><span class="section-number-3">3.2</span> On Ubuntu Linux 16.04</h3>
 <div class="outline-text-3" id="text-3-2">
+<p>
+See <a href="http://tarheel-nc.s3-website-us-east-1.amazonaws.com/tomcat-9-setup.html">http://tarheel-nc.s3-website-us-east-1.amazonaws.com/tomcat-9-setup.html</a>.
+</p>
+</div>
+</div>
+
+<div id="outline-container-org82d954d" class="outline-3">
+<h3 id="org82d954d"><span class="section-number-3">3.3</span> Deploy code</h3>
+<div class="outline-text-3" id="text-3-3">
 <p>
 Well, first you have to write some code.  See <a href="#hello-world">Simplest possible code</a>.
 </p>
@@ -417,24 +453,123 @@ Well, first you have to write some code.  See <a href="#hello-world">Simplest po
 </div>
 </div>
 
-<div id="outline-container-org69b61da" class="outline-2">
-<h2 id="org69b61da"><span class="section-number-2">4</span> Database</h2>
+<div id="outline-container-orgfec4b44" class="outline-2">
+<h2 id="orgfec4b44"><span class="section-number-2">4</span> Database</h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-org54cc1ad" class="outline-3">
-<h3 id="org54cc1ad"><span class="section-number-3">4.1</span> Consider an ORM of some sort</h3>
+<div id="outline-container-orgd834179" class="outline-3">
+<h3 id="orgd834179"><span class="section-number-3">4.1</span> Consider an ORM of some sort</h3>
 </div>
 </div>
 
-<div id="outline-container-org7745686" class="outline-2">
-<h2 id="org7745686"><span class="section-number-2">5</span> JS Framework</h2>
+
+<div id="outline-container-org6c8265d" class="outline-2">
+<h2 id="org6c8265d"><span class="section-number-2">5</span> JavaEE dependencies</h2>
+<div class="outline-text-2" id="text-5">
+<p>
+I feel like there's a license restriction on the EE libs from Oracle.  So I need to find an
+implementation I can use.
+</p>
+
+<p>
+Turns out&#x2026;
+</p>
+
+<blockquote>
+<p>
+The Apache Tomcat® software is an open source implementation of the Java Servlet, JavaServer
+Pages, Java Expression Language and Java WebSocket technologies. The Java Servlet, JavaServer
+Pages, Java Expression Language and Java WebSocket specifications are developed under the Java
+Community Process.
+</p>
+</blockquote>
+
+<p>
+(From <a href="https://tomcat.apache.org/">https://tomcat.apache.org/</a>, right at the top.)
+</p>
+
+<p>
+This at least satisfies the compiler:
+</p>
+
+<pre class="example">
+javac -cp /opt/apache-tomcat-9.0.31/lib/servlet-api.jar com/how_hard_can_it_be/play/Main.java
+</pre>
+
+
+<p>
+<i>I think</i> you can also add them via Maven (from
+<a href="https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api/4.0.1">https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api/4.0.1</a>):
+</p>
+
+<div class="org-src-container">
+<pre class="src src-xml"><span style="color: #36648b; font-style: italic;">&lt;!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api --&gt;</span>
+&lt;<span style="color: #0000ff;">dependency</span>&gt;
+    &lt;<span style="color: #0000ff;">groupId</span>&gt;javax.servlet&lt;/<span style="color: #0000ff;">groupId</span>&gt;
+    &lt;<span style="color: #0000ff;">artifactId</span>&gt;javax.servlet-api&lt;/<span style="color: #0000ff;">artifactId</span>&gt;
+    &lt;<span style="color: #0000ff;">version</span>&gt;4.0.1&lt;/<span style="color: #0000ff;">version</span>&gt;
+    &lt;<span style="color: #0000ff;">scope</span>&gt;provided&lt;/<span style="color: #0000ff;">scope</span>&gt;
+&lt;/<span style="color: #0000ff;">dependency</span>&gt;
+</pre>
 </div>
-<div id="outline-container-org3f3ad35" class="outline-2">
-<h2 id="org3f3ad35"><span class="section-number-2">6</span> App code</h2>
-<div class="outline-text-2" id="text-6">
 </div>
-<div id="outline-container-orgca71ed8" class="outline-3">
-<h3 id="hello-world"><a id="orgca71ed8"></a><span class="section-number-3">6.1</span> Simplest possible code</h3>
+</div>
+
+<div id="outline-container-org1c43c89" class="outline-2">
+<h2 id="org1c43c89"><span class="section-number-2">6</span> JS Framework</h2>
+</div>
+
+<div id="outline-container-org47eafed" class="outline-2">
+<h2 id="org47eafed"><span class="section-number-2">7</span> Build system</h2>
+<div class="outline-text-2" id="text-7">
+</div>
+<div id="outline-container-org0069722" class="outline-3">
+<h3 id="org0069722"><span class="section-number-3">7.1</span> Gradle</h3>
+<div class="outline-text-3" id="text-7-1">
+<p>
+Gradle is not the clean, well-documented system I had hoped for.  Maybe if this turns into a big,
+giant project, it might pay off, but there seems to be a ton black magic documented in example
+code and (probably) StackOverflow answer, so&#x2026; maybe just use Maven.
+</p>
+</div>
+</div>
+
+<div id="outline-container-orgc7c0093" class="outline-3">
+<h3 id="orgc7c0093"><span class="section-number-3">7.2</span> Maven</h3>
+<div class="outline-text-3" id="text-7-2">
+<p>
+Back to Maven, until I give up on it again.
+</p>
+</div>
+
+<div id="outline-container-orgc4c72f2" class="outline-4">
+<h4 id="orgc4c72f2"><span class="section-number-4">7.2.1</span> Install/update</h4>
+<div class="outline-text-4" id="text-7-2-1">
+<p>
+Update maven, configure PATH.  (Is that really all I have to do?)  On a Mac.
+</p>
+
+<p>
+Ok, so, I just downloaded the zip from Apache, unzipped it into <code>/opt</code> and symlinked the <i>three</i>
+executable files in the <code>bin</code> directory to <code>/usr/local/bin</code>, which is already on the path.
+</p>
+</div>
+</div>
+
+<div id="outline-container-org00a53fe" class="outline-4">
+<h4 id="org00a53fe"><span class="section-number-4">7.2.2</span> Make a project</h4>
+</div>
+</div>
+</div>
+
+
+
+<div id="outline-container-orgf9cd067" class="outline-2">
+<h2 id="orgf9cd067"><span class="section-number-2">8</span> App code</h2>
+<div class="outline-text-2" id="text-8">
+</div>
+<div id="outline-container-org287042c" class="outline-3">
+<h3 id="hello-world"><span class="section-number-3">8.1</span> Simplest possible code</h3>
 <div class="outline-text-3" id="text-hello-world">
 <p>
 Uh&#x2026;
@@ -444,8 +579,8 @@ Uh&#x2026;
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2020-03-11 Wed 16:44</p>
-<p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 26.1 (<a href="http://orgmode.org">Org</a> mode 9.1.2)</p>
+<p class="date">Created: 2020-03-22 Sun 23:56</p>
+<p class="creator"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 26.1 (<a href="https://orgmode.org">Org</a> mode 9.2.3)</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
